# dpu-cc

./: CMakeLists.txt  README.md  app_vnf.h  dpdk_utils.c  meson.build  simple_fwd.c  simple_fwd.h  simple_fwd_ft.c  simple_fwd_ft.h  simple_fwd_params.json  simple_fwd_pkt.c  simple_fwd_pkt.h  simple_fwd_port.c  simple_fwd_port.h  simple_fwd_vnf.c  simple_fwd_vnf_core.c  simple_fwd_vnf_core.h
dependencies/: meson.build
